working on dump sort

--- a/Rank2/push_swap/Makefile
+++ b/Rank2/push_swap/Makefile
@@ -3,5 +3,11 @@ SRCS = $(wildcard *.c)
 
 all: $(NAME)
 
+gcc:
+	gcc -o $(NAME) $(SRCS) libft.a -g
+
 $(NAME):
 	cc -o $(NAME) $(SRCS) libft.a
+
+rm:
+	rm $(NAME)
