Norminette is happy

--- a/Rank2/push_swap/Makefile
+++ b/Rank2/push_swap/Makefile
@@ -1,6 +1,19 @@
-NAME = push_swap
+# --- Variables ---
+NAME		= push_swap
+CC			= cc
+CFLAGS		= -Wall -Wextra -Werror
+
+# Paths
+LIBFT_DIR	= ./libft
+LIBFT		= $(LIBFT_DIR/libft.a
+
+# Include Paths
+INCLUDES	= -.I -I$(LIBFT_DIR)
+
+# Source files
 SRCS = $(wildcard *.c)
 
+# 
 all: $(NAME)
 
 gcc:
@@ -9,5 +22,8 @@ gcc:
 $(NAME):
 	cc -o $(NAME) $(SRCS) libft.a
 
-rm:
+fclean:
 	rm $(NAME)
+
+re:
+	fclean all
