--- a/Rank2/so_long/test/libft/Makefile
+++ b/Rank2/so_long/test/libft/Makefile
@@ -2,11 +2,11 @@ NAME = libft.a
 
 SRCS = $(addsuffix .c, free_split ft_atoi ft_atol ft_bzero ft_calloc ft_isalnum ft_isalpha ft_isascii ft_isdigit ft_isprint ft_itoa ft_memchr ft_memcmp ft_memcpy ft_memmove ft_memset ft_putchar_fd ft_putendl_fd ft_putnbr_fd ft_putstr_fd ft_split ft_strchr ft_strdup ft_striteri ft_strjoin ft_strlcat ft_strlcpy ft_strlen ft_strmapi ft_strncmp ft_strnstr ft_strrchr ft_strtrim ft_substr ft_tolower ft_toupper)
 
-BONUS = $(addsuffix .c, ft_lstadd_back ft_lstadd_front ft_lstclear ft_lstdelone ft_lstiter ft_lstlast ft_lstmap ft_lstnew ft_lstsize)
+BONUS = $(addsuffix .c, ft_lstadd_back ft_lstadd_front ft_lstclear ft_lstdelone ft_lstiter ft_lstlast ft_lstmap ft_lstnew ft_lstsize ft_lst_to_strarr)
 
 PRINTF = $(addsuffix .c, ft_helper ft_printf put_char put_hex put_int put_string put_unsigned_int)
 
-GNL = $(addsuffix .c, get_next_line_bonus get_next_line_utils_bonus)
+GNL = $(addsuffix .c, get_next_line_bonus get_next_line_utils_bonus get_line_len)
 
 OBJS = ${SRCS:.c=.o}
 
