Flood Fill Check implementiert && Fenster skaliert

--- a/Rank2/so_long/test/Makefile
+++ b/Rank2/so_long/test/Makefile
@@ -26,7 +26,8 @@ LDFLAGS		= -L$(LIBFT_DIR) -lft \
 
 # Source files
 SRCS 		= $(addsuffix .c, main my_mlx draw_helper key_press free_exit \
-				map_is_valid map_parsing valid_positions)
+				map_is_valid map_parsing map_valid_positions \
+				map_chars_not_reachable)
 
 # Object files
 OBJS		= $(SRCS:.c=.o)
