--- a/Rank3/philo/project-folder/philo/Makefile
+++ b/Rank3/philo/project-folder/philo/Makefile
@@ -2,7 +2,7 @@
 
 NAME		= philo
 CC			= cc
-CFLAGS		= -Wall -Wextra -Werror -pthread -g
+CFLAGS		= -Wall -Wextra -Werror -pthread -g -fsanitize=thread
 
 # Colors
 GREEN		= \033[0;32m
