Working on ex03

--- a/Rank4/CPP01/ex03/Makefile
+++ b/Rank4/CPP01/ex03/Makefile
@@ -1,11 +1,11 @@
-NAME		= test
+NAME		= ex03
 
 CC			= c++
 CPPFLAGS	= -Wall -Werror -Wextra -std=c++98
 
-INCS		= $(addsuffix .hpp, )
+INCS		= $(addsuffix .hpp, Weapon HumanA HumanB)
 
-SRCS		= $(addsuffix .cpp, )
+SRCS		= $(addsuffix .cpp, main Weapon HumanA HumanB)
 
 OBJS		= $(SRCS:.cpp=.o)
 
